--- a/SkySegment/CMakeLists.txt
+++ b/SkySegment/CMakeLists.txt
@@ -1,6 +1,10 @@
 message("SkySegment---${PROJECT_SOURCE_DIR}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/SkySegment/)
-add_library(SkySegment SHARED ./src/SkyRegionDetect.cpp)
+CUDA_ADD_LIBRARY(
+        SkySegment SHARED
+        ./src/SkyRegionDetect.cpp
+        ./src/SkyRegionDetect.cu
+)
 target_link_libraries(SkySegment
         ${OpenCV_LIBS}
         ncnn
